# estudo-tdd

./: .gitignore  LICENSE  README.md  pyproject.toml
superlists/: functional_tests.py  manage.py
superlists/lists/: apps.py  models.py  tests.py  views.py
superlists/lists/migrations/: 0001_initial.py  0002_item_text.py
superlists/lists/templates/: home.html
superlists/superlists/: asgi.py  settings.py  urls.py  wsgi.py
