[tool.poetry]
name = "estudo-tdd"
version = "0.1.0"
description = ""
authors = ["Tiago Tardelli <tiagob.tardelli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
selenium = "^4.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
